2007-08-31  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-08-29  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/network.py:  ipv4= -> noipv4=, ipv6= -> noipv6=
	on NetworkData objects.

	* pykickstart/commands/network.py (F8_NetworkData, F8_Network):  Add
	the --ipv6= option to the network command.
	* pykickstart/handlers/control.py:  Use F8_NetworkData and F8_Network
	for Fedora 8.

	* pykickstart/commands/network.py:  Reorganize how the parser's
	options are set up so there's much less duplication.

2007-08-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/parser.py (KickstartParser._stateMachine):  Add support
	for the %end directive, and issue DeprecationWarnings if it's not
	used.  It will be a long time before the old syntax goes away, though.
	(KickstartParser._stateMachine):  We only need one script state.

	* validator/ksvalidator:  Don't leave downloaded ks files on the
	system if pykickstart hits a traceback.

2007-08-23  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/repo.py (F8_RepoData, F8_Repo):  Add support
	for the --priority, --includepkgs, and --excludepkgs options.
	* pykickstart/handlers/control.py:  Use F8_RepoData and F8_Repo for
	Fedora 8.

2007-08-22  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/reboot.py (FC6_Reboot.__str__):  Fix newline at
	end of output (#253562).

2007-08-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/options.py (KSOption._check_string):  Fix type checking
	of string types.

2007-08-09  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/options.py (KSOption._check_string):  Add a method to
	check string values, since optparse will consume the next argument if
	an argument that requires a value does not specify one (#251318).
